Rendered course card components (broken)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
       "es2017",
       "dom"
     ],
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "strict": true
   }
 }
